Renamed the label in the form

--- a/contact.html
+++ b/contact.html
@@ -47,13 +47,13 @@
             <div class="row">
                 <form>
                     <div class="form-group">
-                        <label for="nameInput">Example label</label>
+                        <label for="nameInput">Name</label>
                         <input type="text" class="form-control" id="nameInput" placeholder="Name">
                     </div>
                     <div class="form-group">
                         <label for="emailInput">Email</label>
                         <input type="email" class="form-control" id="emailInput" aria-describedby="emailHelp"
-                            placeholder="Enter email">
+                            placeholder="example@gmail.com">
                         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
                             else.</small>
                     </div>
